--- a/sql-generator/menu/manu_config/origin-menu.toml
+++ b/sql-generator/menu/manu_config/origin-menu.toml
@@ -1,2 +1,8 @@
+['积分']
+submenu = ['用户管理', '增加管理', '积分计算配置']
 ['VIP管理']
 submenu = ['VIP客户管理', 'VIP优惠设置']
+['流水数据']
+submenu = ['源数据分析', '月数据分析', '半年数据分析', '一年数据分析']
+['运营管理']
+submenu = ['图片','文档','签到管理','订单管理']
